eureka/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eureka
  labels:
    name: eureka
    environment: production
